--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     yang sudah di-deploy:</p>
                 <div class="form-group">
                     <label>URL Apps Script</label>
-                    <input type="text" id="configApiUrl" placeholder="https://script.google.com/macros/s/xxx/exec">
+                    <input type="text" id="configApiUrl" placeholder="https://script.google.com/macros/s/AKfycbyziUjqXJMcSt_kawC6VUaWYKOmcZgqYBo9pug539IvcKw_XS9vI8N8UGsJpOOLMvI/exec">
                 </div>
                 <button class="btn btn-primary btn-full" onclick="saveApiConfig()">
                     <i class="fas fa-save"></i> Simpan & Mulai
